[gd_scene load_steps=17 format=3 uid="uid://cj10yuh5kr7jo"]

[ext_resource type="Script" path="res://Script/player_control.gd" id="1_wnmkw"]
[ext_resource type="Texture2D" uid="uid://dngcglub761kb" path="res://Asset/Texture/Sprite/Player/Reimu.png" id="2_ufuon"]
[ext_resource type="Texture2D" uid="uid://dej0w632fjcjq" path="res://Asset/Texture/Sprite/Player/HitCircle.png" id="3_2hvgi"]
[ext_resource type="Texture2D" uid="uid://byxtev5xj7ri0" path="res://Asset/Texture/Sprite/slash_prototype-Sheet.png" id="4_f5xar"]
[ext_resource type="Script" path="res://Subscene/Player/parry_area.gd" id="4_naxiw"]
[ext_resource type="Texture2D" uid="uid://bfhe0xwsyysqo" path="res://Asset/Texture/Sprite/SmallHandleFilled.png" id="6_pjjio"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqptp"]
radius = 76.99

[sub_resource type="CircleShape2D" id="CircleShape2D_jbhl3"]
radius = 73.85

[sub_resource type="Animation" id="Animation_dr583"]
resource_name = "slash"
length = 0.16667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ef58o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xenu5"]
_data = {
"RESET": SubResource("Animation_ef58o"),
"slash": SubResource("Animation_dr583")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k1daf"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4agu1"]
animation = &"slash"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w3wbt"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tfbir"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_yevai"]
states/RESET/node = SubResource("AnimationNodeAnimation_k1daf")
states/RESET/position = Vector2(634, 166)
states/slash/node = SubResource("AnimationNodeAnimation_4agu1")
states/slash/position = Vector2(453, 76)
transitions = ["slash", "RESET", SubResource("AnimationNodeStateMachineTransition_w3wbt"), "Start", "RESET", SubResource("AnimationNodeStateMachineTransition_tfbir")]

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_wnmkw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pqptp")
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jbhl3")

[node name="AnimatedSprite2D" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_ufuon")

[node name="HitCircle" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = 3
position = Vector2(86, -10)
scale = Vector2(1.06061, 1.06061)
texture = ExtResource("3_2hvgi")

[node name="afterEffect" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = 1
texture = ExtResource("2_ufuon")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="parryArea" type="Area2D" parent="." groups=["PlayerBullet", "PlayerParry"]]
script = ExtResource("4_naxiw")

[node name="Sprite2D" type="Sprite2D" parent="parryArea"]
visible = false
position = Vector2(9.92973, 16.0214)
scale = Vector2(1.15306, 1.42)
texture = ExtResource("4_f5xar")
offset = Vector2(39.69, -9.17)
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="parryArea"]

[node name="AnimationTree" type="AnimationTree" parent="parryArea"]
libraries = {
"": SubResource("AnimationLibrary_xenu5")
}
tree_root = SubResource("AnimationNodeStateMachine_yevai")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="parryArea"]
polygon = PackedVector2Array(-2, -123, -2, 136, 67, 127, 108, 105, 138, 75, 155, 42, 158, 0, 155, -32, 144, -58, 130, -79, 114, -102, 98, -119, 80, -129, 48, -137, 22, -144, -2, -146)
disabled = true

[node name="cone" type="Sprite2D" parent="parryArea"]

[node name="Polygon2D" type="Polygon2D" parent="parryArea"]
scale = Vector2(0.84, 0.84)
color = Color(0, 0, 0, 0.109804)
polygon = PackedVector2Array(-3, 0, 82, -117, 112, -90, 127, -65, 140, -36, 143, -10, 142, 21, 135, 48, 124, 70, 103, 91)

[node name="modeSprite" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0)
texture = ExtResource("6_pjjio")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="area_entered" from="parryArea" to="parryArea" method="_on_area_entered"]
